Fixed several RTA size and alignment issues

--- a/www/elements.css
+++ b/www/elements.css
@@ -176,7 +176,7 @@ button:hover {
 }
 
 #rta_out > pre {
-	padding-right: 1em;
+	padding-right: 2em;
 }
 
 /* syntax highlighting */
